[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[project]
name = "vortran-lbl"
version = "1.0.0"
license = {file = "LICENSE"}
description = "A Python project to control a Vortran Stradus laser"
authors = [
  { name = "Arun Persaud", email = "apersaud@lbl.gov" },
  { name = "Sean Vo", email = "svo2@lbl.gov" }
]
readme = "README.md"
requires-python = ">=3.10"
keywords = ["laser", "vortran", "stradus", "control"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Operating System :: OS Independent"
]

dependencies = [
  "pyusb",
  "libusb",
]

[project.optional-dependencies]
test = [
  "pytest>=7.0",
  "pytest-cov",
]

[project.urls]
Homepage = "https://github.com/FSIBT/Stradus"
Repository = "https://github.com/FSIBT/Stradus"
Issues = "https://github.com/FSIBT/Stradus/issues"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
ignore = ["E741"]
select = ["UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = 80


